--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "prop-types": "^15.6.2",
+    "pubsub-js": "^1.6.1",
     "qs": "^6.5.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
