--- a/src/server/package.json
+++ b/src/server/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "baidu-aip-sdk": "^2.3.3",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
