--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.9.1",
     "antd-mobile": "^2.2.3",
     "axios": "^0.18.0",
+    "bizcharts": "^3.2.4",
     "body-parser": "^1.18.3",
     "prop-types": "^15.6.2",
     "pubsub-js": "^1.6.1",
