--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.8.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "http-proxy-middleware": "^0.19.0",
     "node-sass": "^4.9.3",
     "react-app-rewired": "^1.6.2",
     "redux-devtools-extension": "^2.13.5",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.0.1"
   },
   "proxy": {
     "/api": {
