--- a/package.json
+++ b/package.json
@@ -33,14 +33,9 @@
     "http-proxy-middleware": "^0.19.0",
     "node-sass": "^4.9.3",
     "react-app-rewired": "^1.6.2",
+    "react-loadable": "^5.5.0",
     "redux-devtools-extension": "^2.13.5",
     "sass-loader": "^7.1.0",
     "uglifyjs-webpack-plugin": "^2.0.1"
-  },
-  "proxy": {
-    "/api": {
-      "target": "http://localhost:8080",
-      "secure": false
-    }
   }
 }
